src/firewall/rules.v4

###############################################################################
# Load rules:
# | iptables-restore < rules.v4
# If 'iptables-persistence' is not installed install it:
# | aptitude install iptables-persistence
# If 'iptables-persistence' is already installed simply write changes to config
# file:
# | iptables-save > /etc/iptables/rules.v4
###############################################################################

*filter

# Loopback
-A INPUT -i lo -j ACCEPT
-A OUTPUT -o lo -j ACCEPT

# DNS client
-A OUTPUT -p udp --dport 53 -m udp -j ACCEPT
-A INPUT -p udp --sport 53 -m state --state ESTABLISHED,RELATED -j ACCEPT

# DHCP client
-A OUTPUT -p udp --dport 67:68 -j ACCEPT
-A INPUT -p udp -m state --state ESTABLISHED,RELATED --sport 67:68 -j ACCEPT

# Ping client
-A OUTPUT -p icmp -j ACCEPT
#-A INPUT -p icmp -m state --state NEW --icmp-type 8 -j ACCEPT
-A INPUT -p icmp -m state --state ESTABLISHED,RELATED -j ACCEPT

# NTP client
#-A OUTPUT -p udp --dport 123 -j ACCEPT
#-A INPUT -p udp --sport 123 -m state --state ESTABLISHED,RELATED -j ACCEPT

# SSH client
#-A OUTPUT -p tcp -m state --state NEW,ESTABLISHED --dport 22 -j ACCEPT
#-A INPUT -p tcp -m state --state ESTABLISHED --sport 22 -j ACCEPT

# SSH server
#-A INPUT -p tcp -m state --state NEW,ESTABLISHED --dport 22 -j ACCEPT
#-A OUTPUT -p tcp -m state --state ESTABLISHED --sport 22 -j ACCEPT

# Web client
#-A OUTPUT -p tcp -m tcp --dport 80 -j ACCEPT
#-A OUTPUT -p tcp -m tcp --dport 443 -j ACCEPT
#-A INPUT -p tcp -m state --state ESTABLISHED,RELATED --sport 80 -j ACCEPT
#-A INPUT -p tcp -m state --state ESTABLISHED,RELATED --sport 443 -j ACCEPT

# CUPS server (only required for remote access)
#-A INPUT -p udp --dport 631 -j ACCEPT
#-A INPUT -p tcp --dport 631 -j ACCEPT
#-A OUTPUT -p tcp --sport 631 -j ACCEPT
#-A OUTPUT -p tcp --sport 631 -j ACCEPT

# POP3 client
#-A OUTPUT -p tcp --dport 995 -j ACCEPT
#-A INPUT -p tcp -m state --state ESTABLISHED,RELATED --sport 995 -j ACCEPT

# SMTP client
#-A OUTPUT -p tcp --dport 465 -j ACCEPT
#-A INPUT -p tcp -m state --state ESTABLISHED,RELATED --sport 465 -j ACCEPT

# IMAP client
#-A OUTPUT -p tcp --dport 993 -j ACCEPT
#-A INPUT -p tcp -m state --state ESTABLISHED,RELATED --sport 993 -j ACCEPT

# Log blocked connection attemps
-A INPUT -j LOG --log-prefix "iptable-bad-input:  " --log-level 6
-A FORWARD -j LOG --log-prefix "iptable-bad-forward: " --log-level 6
-A OUTPUT -j LOG --log-prefix "iptable-bad-output: " --log-level 6

# Disallow any non-whitelisted packets
-A INPUT -j REJECT
-A FORWARD -j REJECT
-A OUTPUT -j REJECT

COMMIT
