src/firewall/rules.v6

###############################################################################
# Load rules:
# | ip6tables-restore < rules.v6
# If 'iptables-persistent' is not installed install it:
# | aptitude install iptables-persistent
# If 'iptables-persistent' is already installed simply write changes to config
# file:
# | ip6tables-save > /etc/iptables/rules.v6
###############################################################################

*filter

# Loopback
-A INPUT -i lo -j ACCEPT
-A OUTPUT -o lo -j ACCEPT

# Log blocked connection attemps
-A INPUT -j LOG --log-prefix "ip6table-bad-input:  " --log-level 6
-A FORWARD -j LOG --log-prefix "ip6table-bad-forward: " --log-level 6
-A OUTPUT -j LOG --log-prefix "ip6table-bad-output: " --log-level 6

# Disallow any non-whitelisted packets
-A INPUT -j REJECT
-A FORWARD -j REJECT
-A OUTPUT -j REJECT

COMMIT
